# flake8_pre_commit_hook

./: .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
flake8_pre_commit_hook/: flake8_pre_commit_hook.py
tests/: __init__.py  test_flake8_pre_commit_hook.py
