[metadata]
nane = flake8_pre_commit_hook
description = Run flake8 in a monorepo
author = Sasha Cuerda
author_email = sashacuerda@hey.com
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.6.1

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:flake8_pre_commit_hook/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

